--- a/app/views/public/laboratories/tips/_menu.html.erb
+++ b/app/views/public/laboratories/tips/_menu.html.erb
@@ -10,7 +10,7 @@
       <%= link_to "Paper", public_laboratory_papers_path(@set_laboratory.id), class:"nav-link" %>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Confernce</a>
+      <%= link_to "Confernce", public_laboratory_confernces_path(@set_laboratory.id), class:"nav-link" %>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Reports</a>
