--- a/app/assets/stylesheets/public/form.scss
+++ b/app/assets/stylesheets/public/form.scss
@@ -45,6 +45,11 @@
       width: 100%;
       padding: 4px 8px;
     }
+    
+    input[type="file"] {
+      width: 100%;
+      padding: 4px 8px;
+    }
 
     textarea {
       width: 100%;
