--- a/app/views/public/laboratories/tips/show/_slideshow.html.erb
+++ b/app/views/public/laboratories/tips/show/_slideshow.html.erb
@@ -3,26 +3,23 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <!--slide 1-->
-        <div class="swiper-slide">
-          <%= image_tag asset_path('about-card1.jpg'), class:"rounded img-raised swiper-image" %>
-        </div>
-
-        <!--slide 2-->
-        <div class="swiper-slide">
-          <%= image_tag asset_path('header.jpg'), class:"rounded img-raised swiper-image" %>
-        </div>
-
-        <!--slide 3-->
-        <div class="swiper-slide">
-          <%= image_tag asset_path('about-card2.jpg'), class:"rounded img-raised swiper-image" %>
-        </div>
-
-        <!--slide 4-->
-        <div class="swiper-slide">
-          <%= image_tag asset_path('about-card3.jpg'), class:"rounded img-raised swiper-image" %>
-        </div>
-
+        <% if @labimages.size != 0 %>
+          <% @labimages.each do |labimage| %>
+            <div class="swiper-slide">
+              <%= image_tag labimage.image, class:"rounded img-raised swiper-image" %>
+            </div>
+          <% end %>
+        <% else %>
+          <div class="swiper-slide">
+            <%= image_tag asset_path('community-noimage.jpg'), class:"rounded img-raised swiper-image" %>
+          </div>
+          <div class="swiper-slide">
+            <%= image_tag asset_path('community-noimage.jpg'), class:"rounded img-raised swiper-image" %>
+          </div>
+          <div class="swiper-slide">
+            <%= image_tag asset_path('community-noimage.jpg'), class:"rounded img-raised swiper-image" %>
+          </div>
+        <% end %>
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
