--- a/app/views/public/press_releases/show.html.erb
+++ b/app/views/public/press_releases/show.html.erb
@@ -9,7 +9,7 @@
 
 <div class="container container-page">
   <div class="row rowbox content-title">
-    <i class="fas fa-3x fa-vial icon"></i>
+    <i class="far fa-3x fa-newspaper icon"></i>
     <h2 class="page-title"><%= @press_release.title %></h2>
   </div>
 
