--- a/app/assets/stylesheets/public/user.scss
+++ b/app/assets/stylesheets/public/user.scss
@@ -50,6 +50,12 @@
       margin-right: 10px;
       padding-top: 3px;
     }
+    
+    .notification {
+      .lab-name {
+        font-weight: bold;
+      }
+    }
 
     .paper-rss {
       justify-content: space-between;
