--- a/app/views/public/laboratories/show.html.erb
+++ b/app/views/public/laboratories/show.html.erb
@@ -7,11 +7,23 @@
 <!--menu設定-->
 <%= render "public/laboratories/tips/menu" %>
 
-<div class="lab-top-image">
-  <%= render "public/laboratories/tips/show/slideshow" %>
-</div>
-
 <div class="container container-page">
+
+  <div class="row rowbox content-top page-title">
+    <h3 class="v-line font-bold"><%= @set_laboratory.name %></h3>
+
+    <div class="content-new-link">
+    <% if user_signed_in? && !LabMember.find_by(laboratory_id: @set_laboratory.id, user_id: current_user.id) %>
+      <%= link_to "メンバー申請", public_laboratory_labmembers_path(@set_laboratory.id), class:"btn btn-primary", method: :post %>
+    <% end %>
+  </div>
+
+  </div>
+
+  <div class="lab-top-image">
+    <%= render "public/laboratories/tips/show/slideshow" %>
+  </div>
+
   <!--About-->
   <div class="row rowbox about content-top">
     <%= render "public/laboratories/tips/show/about" %>
