--- a/app/views/public/laboratories/tips/_menu.html.erb
+++ b/app/views/public/laboratories/tips/_menu.html.erb
@@ -1,8 +1,17 @@
-<div class="lab-nav">
-  <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <%= link_to "Home", public_laboratory_path(@set_laboratory.id), class:"nav-link" %>
+<div class="lab-nav justify-content-center lab-menu">
+  <ul class="nav lab-top-link">
+    <li class="nav-item item-top">
+      <%= link_to "Laboratory", public_laboratories_path, class:"nav-link nav-link-top" %> |
+      <%= link_to @set_laboratory.name, public_laboratory_path(@set_laboratory.id), class:"nav-link nav-link-top" %>
+      <% if user_signed_in? && current_user.user_has_edit_status?(@set_laboratory) %>
+        <%= link_to edit_public_laboratory_path(@set_laboratory.id) do %>
+        <i class="far fa-edit item-top-icon"></i>
+        <% end %>
+      <% end %>
     </li>
+  </ul>
+
+  <ul class="nav">
     <li class="nav-item">
       <%= link_to "Member", public_laboratory_member_path(@set_laboratory.id), class:"nav-link" %>
     </li>
@@ -19,10 +28,10 @@
       <%= link_to "Albums", public_laboratory_albums_path(@set_laboratory.id), class:"nav-link" %>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <%= link_to "Links", public_laboratory_lablinks_path(@set_laboratory.id), class:"nav-link" %>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Access</a>
+      <%= link_to "Access", public_laboratory_accesses_path(@set_laboratory.id), class:"nav-link" %>
     </li>
   </ul>
 </div>
