--- a/app/views/public/users/mypage.html.erb
+++ b/app/views/public/users/mypage.html.erb
@@ -48,11 +48,11 @@
 
     </div>
 
-    <!--Rss-->
+    <!--Main-->
     <div class="col-md-8">
       <div class="container user-content">
         <!--研究室からのお知らせ-->
-        <div class="row">
+        <div class="row notification">
           <i class="fas fa-2x fa-flag-checkered user-content-icon"></i>
           <h3>所属研究室からのお知らせ</h3>
           <%= render "public/users/tips/mypage/notification" %>
