--- a/app/views/public/users/tips/mypage/_function.html.erb
+++ b/app/views/public/users/tips/mypage/_function.html.erb
@@ -12,12 +12,7 @@
     
     <tr>
       <td><i class="fas fa-lg fa-building"></i></td>
-      <td><%= link_to "企業を探す" , public_root_path, class:"search-link"%></td>
-    </tr>
-    
-    <tr>
-      <td><i class="fas fa-lg fa-address-card"></i></td>
-      <td><%= link_to "求人を探す" , public_root_path, class:"search-link"%></td>
+      <td><%= link_to "企業を探す" , public_companies_path, class:"search-link"%></td>
     </tr>
     
   </table>
