--- a/app/views/public/users/tips/mypage/_timecard.html.erb
+++ b/app/views/public/users/tips/mypage/_timecard.html.erb
@@ -1,11 +1,11 @@
-<div class="col-12 timecard-head">
-  <i class="fas fa-2x fa-map-signs timecard-title-icon"></i>
-  <h3 class="timecard-title">TimeCard</h3>
-</div>
+<!--<div class="col-12 timecard-head">-->
+<!--  <i class="fas fa-2x fa-map-signs timecard-title-icon"></i>-->
+<!--  <h3 class="timecard-title">TimeCard</h3>-->
+<!--</div>-->
 
-<div class="col-12 timecard-main">
-  <%= link_to public_root_path, class:"btn btn-primary" do %>
-    <i class="far fa-2x fa-clock"> START</i>
-  <% end %>
-</div>
+<!--<div class="col-12 timecard-main">-->
+<!--  <%= link_to public_root_path, class:"btn btn-primary" do %>-->
+<!--    <i class="far fa-2x fa-clock"> START</i>-->
+<!--  <% end %>-->
+<!--</div>-->
 
