--- a/app/views/public/users/tips/show/_community.html.erb
+++ b/app/views/public/users/tips/show/_community.html.erb
@@ -5,59 +5,58 @@
 
 <!--Community-->
   <!-- Swiper -->
+  <% if @communities.size == 0 %>
+  <div class="community-around">
+    <p>登録がありません。</p>
+  </div>
+    
+  <% end %>
+  
+  <% if @communities.size <= 3 %>
+  <div class="community-around">
+    <% @communities.each do |community| %>
+      <%= link_to public_community_path(community.id) do %>
+        <div class="card community-card" style="width: 20rem;">
+          <div class="card-image">
+            <% if community.image.attached? %>
+              <%= image_tag community.image, height: '240', class:"rounded img-raised"%>
+            <% else %>
+              <%= image_tag asset_path('community-noimage.jpg'), class:"rounded img-raised" %>
+            <% end %>
+          </div>
+          <div class="card-body">
+            <h4 class="community-title"><%= community.name %></h4>
+            <p class="card-text"><%= community.introduction.truncate(70) %></p>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+  <% else %>
     <div class="tab-content text-center col-12">
         <div class="container">
           <div class="row">
-            
+
             <!-- Swiper -->
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
-                <!--slide 1-->
-                <div class="swiper-slide">
-                  <div class="card" style="width: 20rem;">
-                    <img class="card-img-top" src="/assets/public/Top/about-card1" alt="Card image cap">
-                    <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                  </div>
-                </div>
-                
-                <!--slide 2-->
-                <div class="swiper-slide">
-                  <div class="swiper-slide">
-                    <div class="card" style="width: 20rem;">
-                      <img class="card-img-top" src="/assets/public/Top/about-card2" alt="Card image cap">
+                <% @communities.each do |community| %>
+                  <%= link_to public_community_path(community.id), class:"swiper-slide" do %>
+                    <div class="card community-card" style="width: 20rem;">
+                      <div class="card-image">
+                        <% if community.image.attached? %>
+                          <%= image_tag community.image, height: '240', class:"rounded img-raised"%>
+                        <% else %>
+                          <%= image_tag asset_path('community-noimage.jpg'), class:"rounded img-raised" %>
+                        <% end %>
+                      </div>
                       <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h4 class="community-title"><%= community.name %></h4>
+                        <p class="card-text"><%= community.introduction.truncate(70) %></p>
                       </div>
                     </div>
-                  </div>
-                </div>
-                
-                <!--slide 3-->
-                <div class="swiper-slide">
-                  <div class="swiper-slide">
-                    <div class="card" style="width: 20rem;">
-                      <img class="card-img-top" src="/assets/public/Top/about-card3" alt="Card image cap">
-                      <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                
-                <!--slide 4-->
-                <div class="swiper-slide">
-                  <div class="swiper-slide">
-                    <div class="card" style="width: 20rem;">
-                      <img class="card-img-top" src="/assets/public/Top/about-card2" alt="Card image cap">
-                      <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                
+                  <% end %>
+                <% end %>
               </div>
               <div class="swiper-button-next"></div>
               <div class="swiper-button-prev"></div>
@@ -67,8 +66,9 @@
         </div>
       </div>
     </div>
+  <% end %>
   </div>
-  
+
 <!-- Swiper JS -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
