--- a/app/views/public/laboratories/member.html.erb
+++ b/app/views/public/laboratories/member.html.erb
@@ -27,7 +27,7 @@
         </tr>
       </thead>
       <tbody>
-        <% if LabMember.find_by(user_id: current_user.id, laboratory_id: @set_laboratory, edit_status: true) %>
+        <% if user_signed_in? && LabMember.find_by(user_id: current_user.id, laboratory_id: @set_laboratory, edit_status: true) %>
           <% @lab_members.each do |member| %>
             <% user = User.find(member.user_id) %>
             <tr>
@@ -47,7 +47,7 @@
               </td>
             </tr>
           <% end %>
-        <% else%>
+        <% else %>
           <% @lab_members.each do |member| %>
             <% break if member.permit_status == false %>
             <% user = User.find(member.user_id) %>
