--- a/app/assets/stylesheets/public/community.scss
+++ b/app/assets/stylesheets/public/community.scss
@@ -405,3 +405,17 @@
   display: flex;
   justify-content: space-around;
 }
+
+.flex-type {
+  display: flex;
+}
+
+.between-type {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.baseline-content {
+  align-items: baseline;
+}
