--- a/app/views/public/users/tips/show/_presentations.html.erb
+++ b/app/views/public/users/tips/show/_presentations.html.erb
@@ -1,6 +1,9 @@
-<div class="col-12 user-presentations">
-  <i class="fas fa-2x fa-chalkboard-teacher presentation-icon"></i>
-  <h3>Presentation</h3>
+<div class="col-12 user-confernces between-type baseline-content">
+  <div class="flex-type">
+    <i class="far fa-2x fa-copy confernce-icon"></i>
+    <h3>Confernce</h3>
+  </div>
+  <%= link_to "confernce 一覧", public_user_user_confernces_path(@user.login_id), class:"rss-register-link" %>
 </div>
 
 <table class="col-12 table">
@@ -10,13 +13,22 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>test title</td>
-      <td>2021/09/05</td>
-    </tr>
-    <tr>
-      <td>test title</td>
-      <td>2021/09/05</td>
-    </tr>
+    <% count = 0 %>
+    <% @confernces.each do |confernce| %>
+      <% if Author.exists?(deliverable_type: "Confernce", deliverable_id: confernce.id, user_id: @user.id) %>
+        <tr>
+          <td><%= link_to confernce.title.truncate(18), public_user_user_confernce_path(@user.login_id, confernce.id) %></td>
+          <td><%= confernce.created_at.strftime("%Y/%m/%d") %></td>
+        </tr>
+        <% count += 1 %>
+      <% end %>
+    <% end %>
+    
+    <% if count == 0 %>
+      <tr>
+        <td>登録がありません</td>
+        <td>- - -</td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
